# kinect2pipe

./: .gitignore  CMakeLists.txt  LICENSE  README.md  kinect2pipe.cpp  kinect2pipe.h  main.cpp
contrib/systemd/: kinect2pipe.service
debian/: changelog  control  copyright  install
